--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     "main": "lib/index",
     "types": "lib/index",
     "scripts": {
+        "lint": "eslint --ignore-path .gitignore src",
+        "prettier": "prettier -c src",
+        "typecheck": "tsc",
         "test": "vitest"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^7.3.1",
+        "eslint": "^8.57.0",
         "prettier": "^3.2.5",
-        "vitest": "^1.1.1",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.1.1"
     },
     "author": "Russell Dunphy",
     "license": "ISC"
