--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint": "eslint --ignore-path .gitignore src",
         "prettier": "prettier -c src",
         "typecheck": "tsc --noEmit",
-        "release": "pnpm build && pnpm version patch && pnpm publish",
+        "release": "rm -rf lib && pnpm build && pnpm version patch && pnpm publish",
         "build": "tsc",
         "test": "vitest"
     },
