--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "ESNext",
-        "sourceMap": true,
-        "outDir": "./lib",
-        "declaration": true,
-        "declarationMap": true,
+        "lib": ["ES2022", "DOM", "DOM.Iterable"],
         "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "moduleResolution": "Bundler",
-        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "NodeNext",
+        "module": "NodeNext",
+        "target": "ES2022",
         "strict": true,
         "skipLibCheck": true,
-        "baseUrl": "./"
+        "declaration": true,
+        "jsx": "react",
+        "rootDir": "src",
+        "outDir": "build",
+        "paths": {
+            "#*": ["./src/*"]
+        }
     },
-    "include": ["src"]
+    "exclude": ["node_modules"],
+    "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
